--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
           <p class="eyebrow">WELCOME, I'M Zoraiz & I MAKE</p>
           <h2 class="title-xl">I'm a Software Engineer!</h2>
           <p class="lead">
-            I am a passionate front-end developer specializing in modern web technologies. Currently working as an intern at Octek Pvt Limited, creating beautiful and responsive web applications using HTML, CSS, and JavaScript.
+            I am a passionate front-end developer specializing in modern web
+            technologies. Currently working as an intern at Octek Pvt Limited,
+            creating beautiful and responsive web applications using HTML, CSS,
+            and JavaScript.
           </p>
           <div class="row center gap-sm">
-            <a class="btn primary" href="mailto:zoraizanilgill@gmail.com">Email Me</a>
+            <a class="btn primary" href="mailto:zoraizanilgill@gmail.com">Email
+              Me</a>
             <a class="btn outline" href="#projects">View Projects</a>
           </div>
         </div>
@@ -52,7 +56,8 @@
             <div class="card simple">
               <div class="icon">💼</div>
               <h4 class="card-title">Front-End Development</h4>
-              <p class="muted">HTML/CSS, responsive layouts, clean UI</p>
+              <p class="muted">HTML/CSS, TailwindCSS, modern styling
+                techniques</p>
             </div>
             <div class="card simple">
               <div class="icon">⚛️</div>
@@ -62,12 +67,12 @@
             <div class="card simple">
               <div class="icon">⚡</div>
               <h4 class="card-title">Modern Frameworks</h4>
-              <p class="muted">SSR concepts, performance basics</p>
+              <p class="muted">Reactjs and Nextjs, performance basics</p>
             </div>
             <div class="card simple">
               <div class="icon">🚀</div>
               <h4 class="card-title">Low-Code</h4>
-              <p class="muted">Rapid prototyping, simple CRUD apps</p>
+              <p class="muted">Lovable, rapid prototyping, full-stack apps</p>
             </div>
           </div>
 
@@ -81,11 +86,16 @@
                 <p class="accent">Octek Pvt Limited Pakistan</p>
                 <p class="muted small">February 2025 - Present</p>
                 <ul class="bullets">
-                  <li>Built responsive UIs in HTML/CSS/JS</li>
-                  <li>Worked with simple data fetching patterns</li>
-                  <li>Created admin pages and basic dashboards</li>
-                  <li>Learned SSR/performance fundamentals</li>
-                  <li>Explored low-code tools with databases</li>
+                  <li>Developed responsive web applications using React,
+                    TypeScript, and TailwindCSS</li>
+                  <li>Implemented GraphQL queries and mutations using Apollo
+                    Client for efficient data fetching</li>
+                  <li>Built admin portals and dashboards with modern UI/UX
+                    principles</li>
+                  <li>Worked on Next.js projects with server-side rendering and
+                    optimized performance</li>
+                  <li>Created full-stack applications using Lovable with
+                    Supabase integration</li>
                 </ul>
               </div>
             </div>
@@ -107,9 +117,12 @@
               </div>
               <div class="card-body">
                 <h4 class="card-title">Book Umrah Platform</h4>
-                <p class="muted">Simple booking flows with authentication and packages.</p>
-                <p class="tags">Next.js · TypeScript · Tailwind</p>
-                <a class="link" href="https://book-umrah-cap.vercel.app/" target="_blank" rel="noopener">View Project</a>
+                <p class="muted">A comprehensive Umrah booking platform built
+                  with Next.js, featuring user authentication, package
+                  management, and booking system.</p>
+                <p class="tags">Next.js · TypeScript · TailwindCSS</p>
+                <a class="link" href="https://book-umrah-cap.vercel.app/"
+                  target="_blank" rel="noopener">View Project</a>
               </div>
             </article>
 
@@ -120,9 +133,10 @@
               </div>
               <div class="card-body">
                 <h4 class="card-title">UTVINT Admin Portal</h4>
-                <p class="muted">Content management and simple admin features.</p>
+                <p class="muted">Full-stack admin portal built with Lovable and Supabase, featuring content management, user administration, and real-time data synchronization.</p>
                 <p class="tags">Lovable · Supabase · React</p>
-                <a class="link" href="https://utvint.com/" target="_blank" rel="noopener">View Project</a>
+                <a class="link" href="https://utvint.com/" target="_blank"
+                  rel="noopener">View Project</a>
               </div>
             </article>
 
@@ -133,9 +147,11 @@
               </div>
               <div class="card-body">
                 <h4 class="card-title">DeliveryX Admin Portal</h4>
-                <p class="muted">Restaurant management with orders and menu.</p>
-                <p class="tags">React · TypeScript</p>
-                <a class="link" href="https://deliveryx-admin-26b58e0f9b78.herokuapp.com/dashboard" target="_blank" rel="noopener">View Project</a>
+                <p class="muted">Restaurant management software with order tracking and menu management built with React and TypeScript.</p>
+                <p class="tags">React · TypeScript · TailwindCSS · Shadcn/UI</p>
+                <a class="link"
+                  href="https://deliveryx-admin-26b58e0f9b78.herokuapp.com/dashboard"
+                  target="_blank" rel="noopener">View Project</a>
               </div>
             </article>
 
@@ -146,9 +162,12 @@
               </div>
               <div class="card-body">
                 <h4 class="card-title">Amazon Clone</h4>
-                <p class="muted">Practice project with responsive layout and cart basics.</p>
+                <p class="muted">Practice project with responsive layout and
+                  cart basics.</p>
                 <p class="tags">HTML · CSS</p>
-                <a class="link" href="https://github.com/zoraizanil/Amazon_clone" target="_blank" rel="noopener">View on GitHub</a>
+                <a class="link"
+                  href="https://github.com/zoraizanil/Amazon_clone"
+                  target="_blank" rel="noopener">View on GitHub</a>
               </div>
             </article>
           </div>
@@ -165,13 +184,17 @@
             <div class="card">
               <div class="row gap-md">
                 <div class="logo-box small">
-                  <img src="assests/Riphah-Logo.jpg" alt="Riphah International University" />
+                  <img src="assests/Riphah-Logo.jpg"
+                    alt="Riphah International University" />
                 </div>
                 <div>
-                  <h4 class="card-title">Bachelor of Science in Data Science</h4>
+                  <h4 class="card-title">Bachelor of Science in Data
+                    Science</h4>
                   <p class="accent">Riphah International University</p>
-                  <p class="muted small">Currently in 5th Semester | Expected Graduation: 2027 | CGPA: 2.7</p>
-                  <p class="muted">Studying data science fundamentals, machine learning, statistics, and programming.</p>
+                  <p class="muted small">Currently in 5th Semester | Expected
+                    Graduation: 2027 | CGPA: 2.7</p>
+                  <p class="muted">Studying data science fundamentals, machine
+                    learning, statistics, and programming.</p>
                 </div>
               </div>
             </div>
@@ -182,10 +205,12 @@
                   <img src="assests/superior-logo.png" alt="Superior College" />
                 </div>
                 <div>
-                  <h4 class="card-title">Intermediate in Computer Science (ICS) with Physics</h4>
+                  <h4 class="card-title">Intermediate in Computer Science (ICS)
+                    with Physics</h4>
                   <p class="accent">Superior College</p>
                   <p class="muted small">2021 - 2023</p>
-                  <p class="muted">Focus on computer science and physics, building strong analytical skills.</p>
+                  <p class="muted">Focus on computer science and physics,
+                    building strong analytical skills.</p>
                 </div>
               </div>
             </div>
@@ -193,13 +218,15 @@
             <div class="card">
               <div class="row gap-md">
                 <div class="logo-box small">
-                  <img src="assests/american-lyceum-logo.png" alt="American Lyceum" />
+                  <img src="assests/american-lyceum-logo.png"
+                    alt="American Lyceum" />
                 </div>
                 <div>
                   <h4 class="card-title">Matriculation in Computer Science</h4>
                   <p class="accent">American Lyceum</p>
                   <p class="muted small">2019 - 2021</p>
-                  <p class="muted">Specialization in computer science; early interest in technology.</p>
+                  <p class="muted">Specialization in computer science; early
+                    interest in technology.</p>
                 </div>
               </div>
             </div>
@@ -211,7 +238,8 @@
       <section id="contact" class="section soft">
         <div class="container narrow text-center">
           <h3 class="title-lg">Get In Touch</h3>
-          <p class="muted">I'm open to discussing projects, ideas, or opportunities.</p>
+          <p class="muted">I'm open to discussing projects, ideas, or
+            opportunities.</p>
 
           <div class="grid two gap-md mt-md">
             <a class="card link-block" href="mailto:zoraizanilgill@gmail.com">
@@ -226,8 +254,11 @@
           </div>
 
           <div class="row center gap-sm mt-md">
-            <a class="chip" href="https://github.com/zoraizanil" target="_blank" rel="noopener">GitHub</a>
-            <a class="chip" href="https://www.linkedin.com/in/zoraiz-anil-gill-629066347/" target="_blank" rel="noopener">LinkedIn</a>
+            <a class="chip" href="https://github.com/zoraizanil" target="_blank"
+              rel="noopener">GitHub</a>
+            <a class="chip"
+              href="https://www.linkedin.com/in/zoraiz-anil-gill-629066347/"
+              target="_blank" rel="noopener">LinkedIn</a>
           </div>
         </div>
       </section>
@@ -246,8 +277,5 @@
       </div>
     </footer>
 
-    
   </body>
-  </html>
-
-
+</html>
