--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <p class="lead">
             I am a passionate front-end developer specializing in modern web
             technologies. Currently working as an intern at Octek Pvt Limited,
-            creating beautiful and responsive web applications using HTML, CSS,
-            and JavaScript.
+            creating beautiful and responsive web applications using React,
+            TypeScript, and cutting-edge frameworks.
           </p>
           <div class="row center gap-sm">
             <a class="btn primary" href="mailto:zoraizanilgill@gmail.com">Email
@@ -133,7 +133,9 @@
               </div>
               <div class="card-body">
                 <h4 class="card-title">UTVINT Admin Portal</h4>
-                <p class="muted">Full-stack admin portal built with Lovable and Supabase, featuring content management, user administration, and real-time data synchronization.</p>
+                <p class="muted">Full-stack admin portal built with Lovable and
+                  Supabase, featuring content management, user administration,
+                  and real-time data synchronization.</p>
                 <p class="tags">Lovable · Supabase · React</p>
                 <a class="link" href="https://utvint.com/" target="_blank"
                   rel="noopener">View Project</a>
@@ -147,7 +149,9 @@
               </div>
               <div class="card-body">
                 <h4 class="card-title">DeliveryX Admin Portal</h4>
-                <p class="muted">Restaurant management software with order tracking and menu management built with React and TypeScript.</p>
+                <p class="muted">Restaurant management software with order
+                  tracking and menu management built with React and
+                  TypeScript.</p>
                 <p class="tags">React · TypeScript · TailwindCSS · Shadcn/UI</p>
                 <a class="link"
                   href="https://deliveryx-admin-26b58e0f9b78.herokuapp.com/dashboard"
@@ -194,7 +198,9 @@
                   <p class="muted small">Currently in 5th Semester | Expected
                     Graduation: 2027 | CGPA: 2.7</p>
                   <p class="muted">Studying data science fundamentals, machine
-                    learning, statistics, and programming.</p>
+                    learning, statistics, and programming. Gaining expertise in
+                    analyzing complex datasets and building data-driven
+                    solutions.</p>
                 </div>
               </div>
             </div>
@@ -209,8 +215,9 @@
                     with Physics</h4>
                   <p class="accent">Superior College</p>
                   <p class="muted small">2021 - 2023</p>
-                  <p class="muted">Focus on computer science and physics,
-                    building strong analytical skills.</p>
+                  <p class="muted">Completed intermediate education with focus
+                    on computer science and physics, building strong foundation
+                    in programming and analytical thinking.</p>
                 </div>
               </div>
             </div>
@@ -225,8 +232,9 @@
                   <h4 class="card-title">Matriculation in Computer Science</h4>
                   <p class="accent">American Lyceum</p>
                   <p class="muted small">2019 - 2021</p>
-                  <p class="muted">Specialization in computer science; early
-                    interest in technology.</p>
+                  <p class="muted">Completed secondary education with
+                    specialization in computer science, developing early
+                    interest in programming and technology.</p>
                 </div>
               </div>
             </div>
